clusters/lab/apps/kasm/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kasm
  namespace: kasm
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - kasm
  rules:
    - host: kasm
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kasm-proxy-default
                port:
                  number: 8080
